- implementação usecase de update
